--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -8,7 +8,7 @@
     <ListView
         android:id="@+id/listview2"
         android:layout_width="300dp"
-        android:layout_height="wrap_content">
+        android:layout_height="55dp">
 
     </ListView>
 
