--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -12,7 +12,7 @@
 
     </ListView>
 
-    <ImageView
+    <ImageButton
         android:layout_marginTop="8dp"
         android:layout_width="50dp"
         android:layout_height="45dp"
